--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <img class="mainCover" src="mainCover.png">
     </div>
 
-    <button class="tasafah" >تصفح</button>
+    <h1>تشكيلة مميزة من كفرات الموبايل</h1>
+
+    <p class="landingPageText">نقدم لكم تشكيلة مميزة من كفرات الموبايل و ستكرات</p>
+    <p class="landingPageText2">🚚 جودة عالية  💼| أسعار تنافسية  💰| توصيل لجميع المحافظات</p>
+
+
+    <a href="library.html">
+        <button class="tasafah">تصفح</button>
+    </a>
 
 </body>
 </html>
