--- a/library.html
+++ b/library.html
@@ -11,21 +11,29 @@
 
     <div class="products">
 
-        <div class="product">
-            <img src="mainCover.png">
-        </div>
+        <a href="product.html">
+            <div class="product">
+                <img class="productIMG" src="mainCover.png">
+            </div>
+        </a>
 
-        <div class="product">
-            <img src="mainCover.png">
-        </div>
+        <a href="product.html">
+            <div class="product">
+                <img class="productIMG" src="mainCover.png">
+            </div>
+        </a>
 
-        <div class="product">
-            <img src="mainCover.png">
-        </div>
+        <a href="product.html">
+            <div class="product">
+                <img class="productIMG" src="mainCover.png">
+            </div>
+        </a>
 
-        <div class="product">
-            <img src="mainCover.png">
-        </div>
+        <a href="product.html">
+            <div class="product">
+                <img class="productIMG" src="mainCover.png">
+            </div>
+        </a>
 
     </div>
     
