--- a/buy.html
+++ b/buy.html
@@ -7,29 +7,12 @@
     <title>Y Y Phone</title>
 </head>
 <body>
-
     <header>
-        <a class="back" href="library.html">
+        <a class="back" href="product.html">
             <img class="back" src="arrow_back_ios_new_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png">
         </a>
         <img src="mainLogo.png">
     </header>
     
-    <div class="mainProductCoverE">
-        <img class="mainProductCover" src="mainCover.png">
-    </div>
-
-    <h2>$price</h2>
-
-    <div class="description">
-
-    </div>
-
-    <div class="buySection">
-        <a href="buy.html">
-            <button class="buy">Buy</button>
-        </a>
-    </div>
-
 </body>
 </html>
