--- a/product.html
+++ b/product.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="buySection">
-        <a href="buy.html">
+        <a href="order.html">
             <button class="buy">Buy</button>
         </a>
     </div>
