--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Y Y Phone">
+    <meta name="description" content="phone cases">
+    <meta name="keywords" content="phone , case , phone case , كفر , العراق ,بغداد">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Arabic">
     <link rel="stylesheet" href="main.css">
 
     <title>Y Y Phone</title>
