--- a/library.html
+++ b/library.html
@@ -24,208 +24,207 @@
     </a>
 
     <div class="products">
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?adidas">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/adidas.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?adidascolored">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/adidascolored.png">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?bentley">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/bentley.png">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?bk1">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/bk1.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?bk2">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/bk2.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?bmw">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/bmw.png">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?cars">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/cars.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?CF1">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/CF1.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?CF2">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/CF2.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?combo1">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/combo1.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?combo2">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/combo2.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?dior">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/dior.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?eyes">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/eyes.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?eyes2">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/eyes2.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?eyesblack">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/eyesblack.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?face">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/face.png">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?flowers">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/flowers.png">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?flowers1">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/flowers1.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?flowers2">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/flowers2.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?flowers3">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/flowers3.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?flowers4">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/flowers4.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?knit">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/knit.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?knit1">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/knit1.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?knit2">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/knit2.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?knit3">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/knit3.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?knit4">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/knit4.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?lacoste">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/lacoste.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?lacoste1">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/lacoste1.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?lacoste2">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/lacoste2.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?lacoste3">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/lacoste3.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?magsafe">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/magsafe.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?medalions">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/medalions.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?nba">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/nba.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?silicone">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/silicone.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?silver">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/silver.png">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?silver1">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/silver1.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?silver2">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/silver2.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?snake">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/snake.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?tesla">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/tesla.jpg">
             </div>
         </a>
-        <a href="https://www.instagram.com/y_y_phone/">
+        <a href="product.html?versace">
             <div class="product">
                 <img class="productIMG" src="yy phone IMG/versace.jpg">
             </div>
         </a>
-    </div></div>
-
+    </div>
     
     
 </body>
