--- a/product.html
+++ b/product.html
@@ -16,20 +16,20 @@
     </header>
     
     <div class="mainProductCoverE">
-        <img class="mainProductCover" src="mainCover.png">
+        <img class="mainProductCover" id="mainProductCover" src="https://placehold.co/150x150">
     </div>
 
-    <h2>$price</h2>
-
     <div class="description">
-
+        التوصيل لكل محافظات العراق 5,000
     </div>
 
     <div class="buySection">
-        <a href="order.html">
+        <a href="https://www.instagram.com/y_y_phone/">
             <button class="buy">Buy</button>
         </a>
     </div>
+
+    <script src="product.js" ></script>
 
 </body>
 </html>
