--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html lang="ar">
 <head>
+    <title>Y Y Phone | كفرات موبايل في العراق</title>
+    <meta name="description" content="Y Y Phone - أفضل تشكيلة كفرات موبايل وستكرات في العراق. جودة عالية وأسعار تنافسية.">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Y Y Phone">
@@ -12,7 +15,7 @@
     <meta name="language" content="Arabic">
     <link rel="stylesheet" href="main.css">
 
-    <title>Y Y Phone</title>
+    <meta name="google-site-verification" content="d32KWEH_zDc8ksbOArjx-dzX_FZon4eSjNOKdP_aPrA" />
 </head>
 <body>
     
@@ -31,6 +34,17 @@
     <a href="library.html">
         <button class="tasafah">تصفح</button>
     </a>
+
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Store",
+        "name": "Y Y Phone",
+        "description": "تشكيلة كفرات موبايل وستكرات في العراق",
+        "image": "mainLogo.png",
+        "url": "https://laithwaseem-web.github.io/yy-phone/"
+        }
+    </script>
 
 </body>
 </html>
