--- a/index.html
+++ b/index.html
@@ -2,20 +2,43 @@
 
 <html lang="ar">
 <head>
-    <title>Y Y Phone | كفرات موبايل في العراق</title>
-    <meta name="description" content="Y Y Phone - أفضل تشكيلة كفرات موبايل وستكرات في العراق. جودة عالية وأسعار تنافسية.">
-
+    <head>
+    <title>Y Y Phone | كفرات موبايل في العراق | Phone Cases in Iraq</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Y Y Phone">
-    <meta name="description" content="phone cases">
-    <meta name="keywords" content="phone , case , phone case , كفر , العراق ,بغداد">
+
+
+    <meta name="title" content="Y Y Phone | كفرات موبايل في العراق">
+    <meta name="description" content="Y Y Phone - أفضل تشكيلة كفرات موبايل وستكرات في العراق. جودة عالية وأسعار تنافسية. بيع كفرات موبايل أصلية وتوصيل سريع.">
+    <meta name="keywords" content="Y Y Phone, phone cases, كفرات موبايل, ستكرات, العراق, بغداد, mobile accessories, buy phone case, متجر كفرات, yy phone">
     <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Arabic">
-    <link rel="stylesheet" href="main.css">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://laithwaseem-web.github.io/yy-phone/">
+    <meta property="og:title" content="Y Y Phone | كفرات موبايل في العراق">
+    <meta property="og:description" content="أفضل متجر لبيع كفرات الموبايل وستكرات في العراق. جودة عالية وأسعار تنافسية.">
+    <meta property="og:image" content="mainLogo.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Y Y Phone | كفرات موبايل في العراق">
+    <meta property="twitter:description" content="أفضل متجر لبيع كفرات الموبايل وستكرات في العراق. جودة عالية وأسعار تنافسية.">
+    <meta property="twitter:image" content="mainLogo.png">
 
     <meta name="google-site-verification" content="d32KWEH_zDc8ksbOArjx-dzX_FZon4eSjNOKdP_aPrA" />
+    <link rel="stylesheet" href="main.css">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Store",
+      "name": "Y Y Phone",
+      "description": "تشكيلة كفرات موبايل وستكرات في العراق",
+      "image": "mainLogo.png",
+      "url": "https://laithwaseem-web.github.io/yy-phone/"
+    }
+    </script>
+</head>
 </head>
 <body>
     
